# Rocket-Logbook

./: README.md  data_manager.py  demo_rocket_launches.json  demo_rocket_logbook.py  install_termux.sh  models.py  pyproject.toml  rocket_logbook.py  setup.py  stats.py  utils.py
rocket_logbook/: __init__.py  data_manager.py  main.py  models.py  stats.py  utils.py
