[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rocket-logbook"
version = "0.1.0"
description = "A terminal-based logbook for tracking model rocket launches"
requires-python = ">=3.6"
dependencies = [
    "appdirs>=1.4.4",
    "rich>=13.9.4",
]
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
urls = {Homepage = "https://github.com/michaelp91-dev/rocket-logbook"}

[project.scripts]
rocket-logbook = "rocket_logbook.main:main"
